@@ -1,4 +1,4 @@
 Put your translated *.po files here, then execute "make" to generate
 machine-readable *.mo files in the locale directory.
 
-If you want to edit your *.po file with a GUI, try www.poedit.org.
+More about translations at http://gpodder.berlios.de/i18n.html
