@@ -1,32 +1,0 @@
-
-
-              === Development of gPodder on Ubuntu Breezy ===
-
-
-  The following packages have to be installed as a minimum requirement, 
-  additionally to a standard Ubuntu Breezy (5.10) installation:
-
-    sudo apt-get install make subversion python-dev help2man
-
-  Please make sure you add the following repositories/apt sources to your 
-  sources.list file:
-
-    * Ubuntu Breezy
-      \_ main, restricted, universe
-    * Ubuntu Breezy Updates
-      \_ main, restricted, universe
-    * Ubuntu Breezy Security
-      \_ main, restricted, universe
-
-  The following packages have to be installed for building Debian packages 
-  out of the source tree:
-
-    sudo apt-get install cvs devscripts debhelper fakeroot
-
-  For building Debian packages, please read debian.txt!
-
-
-
-                       -- thp <thp@perli.net>  Fre Dez  9 15:27:37 CET 2005
-                                  Last Update: Sam Dez 24 15:36:59 CET 2005
-
