@@ -1,34 +1,0 @@
-Building .deb packages
-======================
-
-generate a new entry in debian/changelog 
-   
-  debchange -v 0.7+svn20060331-1
-
-
-build the new package:
-
-  fakeroot ./debian/rules binary
-
-or simply:
-
-  debuild
-
-
-create source package:
-
-  dpkg-source -b [directory name]
-
-extract source package:
-
-  dpkg-source -x [...]
-
-
-check for new upstream:
-
-  uscan
-
-update to new upstream version:
-
-  uupdate
-
