@@ -1,32 +1,0 @@
-
-  VERY short gPodder i18n HOW-TO :)
-  =================================
-
-  to use i18n in gpodder, to the following in gPodder's dir:
-
-  *) install dependencies listed in README
-  *) run "make distclean"
-  *) run "make messages"
-  *) copy "data/messages.pot" to "data/po/XX.po",
-     with "XX" being your iso lang code (example: "de")
-  *) edit the "data/po/XX.po" file (translate the strings)
-  *) edit "data/gpodder.desktop" and translate the Comment line,
-     so if you're adding the "XX" translation, add a line like this:
-     
-     Comment[XX]=a media aggregator / podcast catcher
-
-     (of course, with the comment translated into the XX language)     
-  *) run "make messages" again
-  *) run "make test" to see if it works
-  *) add your language to the languages list in setup.py
-
-  report any problems/bugs to: gpodder-devel@berlios.de
-
-
-   -- thp <thp@perli.net>, Thu, 30 Mar 2006 23:16:20 +0200
-                  Updated: Fri, 31 Mar 2006 18:11:41 +0200
-                  Updated: Wed, 05 Apr 2006 20:13:07 +0200
-                  Updated: Fri, 07 Apr 2006 15:28:33 +0200
-                  Updated: Sat, 08 Apr 2006 08:48:59 +0200
-
-
