@@ -1,3 +1,15 @@
+Thu, 30 Aug 2007 12:03:24 +0200 <thp@perli.net>
+Remove obsolete documentation in doc/dev; cosmetic changes
+
+	* data/po/Makefile: Upgrade to GPLv3
+	* data/po/README: Mention i18n page on gPodder's website
+	* doc/dev/build-deps-breezy.txt: Removed
+	* doc/dev/debian.txt: Removed
+	* doc/dev/i18n.txt: Removed
+	* doc/dev/porting.txt: Removed
+	* doc/dev/svncl.sed: Upgrade to GPLv3; modify look added and removed
+	files
+
 Wed, 29 Aug 2007 20:26:50 +0200 <thp@perli.net>
 Upgrade to the GNU General Public License, Version 3
 
